# vcli

./: .gitignore  AGENT.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODOS.md
.github/workflows/: ci.yml
crates/vcli-capture/: Cargo.toml  build.rs  build_support.rs
crates/vcli-capture/examples/: capture_once.rs
crates/vcli-capture/src/: capture.rs  error.rs  lib.rs  mock.rs  permission.rs
crates/vcli-capture/src/macos/: convert.rs  mod.rs  sck.rs
crates/vcli-capture/src/windows/: mod.rs
crates/vcli-capture/tests/: build_support.rs  macos_sck_smoke.rs
crates/vcli-cli/: Cargo.toml
crates/vcli-cli/src/: cli.rs  client.rs  error.rs  format.rs  lib.rs  util.rs
crates/vcli-cli/src/commands/: cancel.rs  daemon.rs  gc.rs  health.rs  list.rs  logs.rs  mod.rs  resume.rs  submit.rs
crates/vcli-cli/tests/: bin.rs  e2e.rs  parse.rs
crates/vcli-cli/tests/common/: mod.rs
crates/vcli-core/: Cargo.toml
crates/vcli-core/src/: action.rs  canonical.rs  clock.rs  error.rs  events.rs  frame.rs  geom.rs  ids.rs  lib.rs  predicate.rs  program.rs  region.rs  state.rs  step.rs  trigger.rs  watch.rs
crates/vcli-core/tests/: fixture_canonical.rs
crates/vcli-daemon/: Cargo.toml  build.rs
crates/vcli-daemon/src/: assets.rs  bridge.rs  config.rs  error.rs  factory_macos.rs  factory_mock.rs  handler.rs  lib.rs  logging.rs  persist.rs  pidfile.rs  run.rs  shutdown.rs  startup.rs
crates/vcli-daemon/tests/: binary_smoke.rs  graceful_shutdown.rs  real_backends_macos.rs  startup_orphan_recovery.rs  submit_and_run.rs
crates/vcli-dsl/: Cargo.toml
crates/vcli-dsl/src/: error.rs  expression.rs  hash.rs  hint.rs  lib.rs  parse.rs  path.rs  predicates.rs  steps.rs  triggers.rs  watches.rs
crates/vcli-dsl/tests/: yt_ad_skipper.rs
crates/vcli-input/: Cargo.toml  README.md
crates/vcli-input/src/: error.rs  keymap.rs  kill_switch.rs  lib.rs  mock.rs  permissions.rs  sink.rs
crates/vcli-input/src/macos/: cg_events.rs  cg_sink.rs  cg_typing.rs  hotkey_tap.rs  mod.rs  tcc.rs
crates/vcli-input/src/windows/: mod.rs
crates/vcli-input/tests/: kill_switch.rs  macos_real.rs  mock_contract.rs
crates/vcli-ipc/: Cargo.toml
crates/vcli-ipc/src/: client.rs  error.rs  frame.rs  handler.rs  lib.rs  server.rs  socket_path.rs
crates/vcli-ipc/src/wire/: mod.rs  request.rs  response.rs  stream.rs
crates/vcli-ipc/tests/: errors.rs  roundtrip.rs  streaming.rs
crates/vcli-perception/: Cargo.toml
crates/vcli-perception/src/: cache.rs  color_at.rs  elapsed.rs  error.rs  evaluator.rs  frame_view.rs  lib.rs  logical.rs  perception.rs  pixel_diff.rs  state.rs  template.rs
crates/vcli-perception/tests/: cache_and_state.rs
crates/vcli-perception/tests/fixtures/: README.md
crates/vcli-runtime/: Cargo.toml  build.rs
crates/vcli-runtime/src/: arbiter.rs  body.rs  budget.rs  clock.rs  command.rs  confirm.rs  error.rs  event.rs  expr.rs  lib.rs  merged_graph.rs  program.rs  scheduler.rs  transitions.rs  triggers.rs  watches.rs
crates/vcli-runtime/tests/common/: mock_capture.rs  mock_input.rs  mod.rs
crates/vcli-runtime/tests/scenarios/: action_conflict.rs  assert_failure.rs  daemon_restart_marker.rs  elapsed_ms_since_true.rs  input_postcondition.rs  novelty_timeout.rs  one_shot_watch.rs  persistent_watch.rs  predicate_dedup.rs  template_asset_runtime.rs  until_predicate.rs  wait_for_timeout.rs  watch_timeout.rs  while_true_retry.rs
crates/vcli-store/: Cargo.toml
crates/vcli-store/src/: assets.rs  error.rs  events.rs  gc.rs  lib.rs  migrations.rs  paths.rs  pragmas.rs  resume.rs  store.rs  traces.rs
crates/vcli-store/tests/: assets_dedup.rs  gc.rs  restart_recovery.rs  wal_concurrent.rs
docs/superpowers/plans/: 2026-04-16-vcli-capture.md  2026-04-16-vcli-core-bootstrap.md  2026-04-16-vcli-dsl.md  2026-04-16-vcli-input.md  2026-04-16-vcli-ipc.md  2026-04-16-vcli-perception.md  2026-04-16-vcli-store.md  2026-04-17-vcli-cli.md  2026-04-17-vcli-daemon.md  2026-04-17-vcli-runtime.md  2026-04-22-vcli-daemon-real-backends.md  2026-05-01-vcli-daemon-state-persistence.md  2026-05-01-vcli-template-assets.md
docs/superpowers/specs/: 2026-04-16-vcli-design.md
fixtures/: yt_ad_skipper.json
