[workspace]
resolver = "2"
members = [
    "crates/vcli-core",
    "crates/vcli-dsl",
    "crates/vcli-ipc",
    "crates/vcli-perception",
    "crates/vcli-store",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
version = "0.0.1"
license = "MIT"
repository = "https://github.com/blaksmatic/vcli"
authors = ["blaksmatic"]

[workspace.dependencies]
# Shared across all crates that will exist. Only vcli-core uses these in this plan.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
ryu = "1"
unicode-normalization = "0.1"

# Added by vcli-ipc lane
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1"
futures-core = "0.3"

rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"

# Added by vcli-perception lane
dashmap = "6"
imageproc = "0.25"
image = { version = "0.25", default-features = false, features = ["png"] }

# Dev-only
proptest = "1"
tempfile = "3"
tokio-test = "0.4"
approx = "0.5"
