[workspace]
resolver = "2"
members = [
    "crates/vcli-core",
    "crates/vcli-capture",
    "crates/vcli-daemon",
    "crates/vcli-dsl",
    "crates/vcli-input",
    "crates/vcli-ipc",
    "crates/vcli-perception",
    "crates/vcli-cli",
    "crates/vcli-runtime",
    "crates/vcli-store",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
version = "0.0.1"
license = "MIT"
repository = "https://github.com/blaksmatic/vcli"
authors = ["blaksmatic"]

[workspace.dependencies]
# Shared across all crates that will exist. Only vcli-core uses these in this plan.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
ryu = "1"
unicode-normalization = "0.1"

# Added by vcli-ipc lane
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "time", "signal"] }
async-trait = "0.1"
futures-core = "0.3"

# Added by vcli-daemon lane
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
fs2 = "0.4"
dirs = "5"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"

rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"

tracing = "0.1"

# Added by vcli-runtime lane
crossbeam-channel = "0.5"

# Platform-specific (used by vcli-input + vcli-capture)
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
libc = "0.2"
screencapturekit = "1"

# Added by vcli-perception lane
dashmap = "6"
imageproc = "0.25"
image = { version = "0.25", default-features = false, features = ["png"] }

# Added by vcli-cli lane
clap = { version = "4", features = ["derive", "wrap_help"] }
assert_cmd = "2"
predicates = "3"

# Dev-only
proptest = "1"
tempfile = "3"
tokio-test = "0.4"
approx = "0.5"
