[package]
name = "vcli-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Capture trait, macOS ScreenCaptureKit backend, mock, Windows stub, for vcli."

[dependencies]
vcli-core = { path = "../vcli-core" }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { workspace = true }

[dev-dependencies]
image = { workspace = true }
tempfile = { workspace = true }

[[example]]
name = "capture_once"
path = "examples/capture_once.rs"
