[package]
name = "vcli-dsl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Parser + validator for vcli JSON programs. No IO, no hashing of assets."

[dependencies]
vcli-core = { path = "../vcli-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
