[package]
name        = "vcli-runtime"
version.workspace     = true
edition.workspace     = true
rust-version.workspace= true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Deterministic 10 fps scheduler that wires Capture → Perception → Arbiter → Input for vcli programs."

[dependencies]
vcli-core        = { path = "../vcli-core" }
vcli-capture     = { path = "../vcli-capture" }
vcli-input       = { path = "../vcli-input" }
vcli-perception  = { path = "../vcli-perception" }

crossbeam-channel = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
serde_json        = { workspace = true }

[dev-dependencies]
vcli-dsl          = { path = "../vcli-dsl" }
proptest          = { workspace = true }
tempfile          = { workspace = true }

[[test]]
name = "one_shot_watch"
path = "tests/scenarios/one_shot_watch.rs"

[[test]]
name = "persistent_watch"
path = "tests/scenarios/persistent_watch.rs"

[[test]]
name = "until_predicate"
path = "tests/scenarios/until_predicate.rs"

[[test]]
name = "watch_timeout"
path = "tests/scenarios/watch_timeout.rs"

[[test]]
name = "while_true_retry"
path = "tests/scenarios/while_true_retry.rs"
